--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>2550</width>
-    <height>1064</height>
+    <height>1096</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -609,6 +609,66 @@
                      </item>
                      <item row="5" column="1">
                       <widget class="QSpinBox" name="spx_inertia"/>
+                     </item>
+                    </layout>
+                   </item>
+                  </layout>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QGroupBox" name="groupBox_11">
+                  <property name="title">
+                   <string>Member</string>
+                  </property>
+                  <layout class="QGridLayout" name="gridLayout_21">
+                   <item row="0" column="0">
+                    <layout class="QGridLayout" name="gridLayout_20">
+                     <item row="2" column="1">
+                      <widget class="QDoubleSpinBox" name="doubleSpinBox_21"/>
+                     </item>
+                     <item row="0" column="0">
+                      <widget class="QLabel" name="label_25">
+                       <property name="text">
+                        <string>Member</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="2" column="0">
+                      <widget class="QLabel" name="label_28">
+                       <property name="text">
+                        <string>Beam</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="1" column="0">
+                      <widget class="QLabel" name="label_27">
+                       <property name="text">
+                        <string>Columns</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="0" column="1">
+                      <widget class="QLabel" name="label_26">
+                       <property name="text">
+                        <string>Moment of 
+inertia for 
+elastic 
+analysis </string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="1" column="1">
+                      <widget class="QSpinBox" name="spinBox"/>
+                     </item>
+                     <item row="3" column="0">
+                      <widget class="QLabel" name="label_29">
+                       <property name="text">
+                        <string>Walls</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="3" column="1">
+                      <widget class="QDoubleSpinBox" name="doubleSpinBox_22"/>
                      </item>
                     </layout>
                    </item>
