--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -688,10 +688,7 @@
                   </property>
                   <layout class="QGridLayout" name="gridLayout_21">
                    <item row="0" column="0">
-                    <layout class="QGridLayout" name="gridLayout_20">
-                     <item row="2" column="1">
-                      <widget class="QDoubleSpinBox" name="doubleSpinBox_21"/>
-                     </item>
+                    <layout class="QFormLayout" name="formLayout_13">
                      <item row="0" column="0">
                       <widget class="QLabel" name="label_25">
                        <property name="text">
@@ -699,44 +696,44 @@
                        </property>
                       </widget>
                      </item>
-                     <item row="2" column="0">
-                      <widget class="QLabel" name="label_28">
+                     <item row="0" column="1">
+                      <widget class="QLabel" name="label_26">
                        <property name="text">
-                        <string>Beam</string>
+                        <string>Moment of inertia for elastic analysis</string>
                        </property>
                       </widget>
                      </item>
                      <item row="1" column="0">
                       <widget class="QLabel" name="label_27">
                        <property name="text">
-                        <string>Columns</string>
-                       </property>
-                      </widget>
-                     </item>
-                     <item row="0" column="1">
-                      <widget class="QLabel" name="label_26">
-                       <property name="text">
-                        <string>Moment of 
-inertia for 
-elastic 
-analysis </string>
+                        <string>Columns:</string>
                        </property>
                       </widget>
                      </item>
                      <item row="1" column="1">
                       <widget class="QSpinBox" name="spinBox"/>
                      </item>
+                     <item row="2" column="0">
+                      <widget class="QLabel" name="label_28">
+                       <property name="text">
+                        <string>Beam:</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="2" column="1">
+                      <widget class="QDoubleSpinBox" name="doubleSpinBox_21"/>
+                     </item>
+                     <item row="3" column="0">
+                      <widget class="QLabel" name="label_29">
+                       <property name="text">
+                        <string>Walls:</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="3" column="1">
+                      <widget class="QDoubleSpinBox" name="doubleSpinBox_22"/>
+                     </item>
                     </layout>
-                   </item>
-                   <item row="1" column="1">
-                    <widget class="QDoubleSpinBox" name="doubleSpinBox_22"/>
-                   </item>
-                   <item row="1" column="0">
-                    <widget class="QLabel" name="label_29">
-                     <property name="text">
-                      <string>Walls</string>
-                     </property>
-                    </widget>
                    </item>
                   </layout>
                  </widget>
